rush00/inc/compiling_error.txt
/Users/mleclair/bordel/tmp/inc/fighter.class.hpp:4:11: error: non-portable path to file '"enemie.class.hpp"'; specified path differs in case from file name on disk [-Werror,-Wnonportable-include-path]
# include "Enemie.class.hpp"
          ^~~~~~~~~~~~~~~~~~
          "enemie.class.hpp"
1 error generated.
